syntax = "proto3";


import "mars/serialize/protos/operand.proto";
import "mars/serialize/protos/chunk.proto";
import "mars/serialize/protos/tensor.proto";


message GraphDef {
    message NodeDef {
        oneof node {
            OperandDef op = 1;
            ChunkDef tensor_chunk = 2;
            TensorDef tensor = 3;
        }
    }

    enum Level {
        CHUNK = 0;
        ENTITY = 1;
    }

    Level level = 2;
    repeated NodeDef node = 1;
}